0031758: Visualization, AIS_InteractiveContext - unify clearDynamicHighlight() method